<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/colorAccent"
    android:verticalScrollbarPosition="right"
    android:overScrollMode="always"
    tools:context="at.xp2_2017.battlefood.UploadRecipeUi"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTexttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="working time in"
        android:textAlignment="textEnd"
        android:inputType="number"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonSelPic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Select Pic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtPictureSelected"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtPictureSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="no picture selected"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintRight_toRightOf="@+id/linearLayout"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/editTexttime"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.47">

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editTexttime"
        android:layout_marginStart="13dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textViewpersons"
            android:layout_width="125dp"
            android:layout_height="61dp"
            android:text="Number of persons"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextadult"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:ems="0"
            android:hint="adult"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextchild"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="child"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-2dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="min"
        android:textSize="18sp"
        android:layout_marginStart="9dp"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/editTexttime"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/txtNameRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name of Recipe"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPictureSelected"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtPictureSelected" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingredients"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextIngredients"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:ems="10"
            android:hint="Ingredient : Amount"
            android:maxLines="4"
            android:windowSoftInputMode="adjustPan" />

        <!--android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textMultiLine|textShortMessage|textAutoCorrect|textCapSentences"
                android:maxLines="2" />-->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instruction"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextinstruction"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:ems="10"
            android:hint="Insert instruction"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:windowSoftInputMode="adjustPan" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgRecipePic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintRight_toRightOf="@+id/buttonSelPic"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelPic"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSelPic" />
    <Button
        android:id="@+id/menuRUI"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:drawable/screen_background_light_transparent"
        android:text="|||"
        android:textStyle="bold"
        android:rotation="90"
        android:lineSpacingExtra="20sp"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />


</android.support.constraint.ConstraintLayout>
